[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rajkumar-ml-contracts"
version = "0.1.0"
description = "Design-by-Contract for ML pipelines: fail-fast data/features/models"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas>=1.5",
    "scipy>=1.10",
    "numpy"
]
authors = [{name = "Rajkumar BR", email = "rajkumar@example.com"}]
license = {text = "MIT"}
keywords = ["ml", "contracts", "validation", "pipeline"]

[project.urls]
Homepage = "https://github.com/RajkumarBR9789/ml-contracts"
Repository = "https://github.com/RajkumarBR9789/ml-contracts"

[tool.hatch.build.targets.wheel]
packages = ["src/ml_contracts"]
